# Distrakt

./: .gitignore  Cargo.toml  README.md  SQLTABLES.md  config.sample.json
migrations/2019-01-23-182641_create_users/: up.sql
migrations/episodes/: down.sql  up.sql
migrations/movies/: up.sql
migrations/notifications/: up.sql
migrations/notify/: down.sql  up.sql
migrations/shows/: down.sql  up.sql
migrations/sqlite/: up.sql
migrations/users/: up.sql
src/: config.rs  distrakt_trakt.rs  main.rs  messages.rs  models.rs  notifier.rs  schema.rs  sql.rs  wrappers.rs
src/commands/: auth.rs  mod.rs  notify.rs  owner.rs  subscribe.rs  user.rs  watchlist.rs
