[package]
name = "distrakt"
version = "0.1.0"
authors = ["Jens Gatzweiler <lichthagel@tuta.io>"]
edition = "2018"

[dependencies]
# change when released
trakt = { git = "https://github.com/Lichthagel/trakt-rust", rev = "06a7dff" }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "6b4e198" }
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
typemap = "0.3.3"
chrono = "0.4.6"
time = "0.1.42"
diesel = { version = "1.4.0", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"