[package]
name = "distrakt"
version = "0.1.0"
authors = ["Jens Gatzweiler <lichthagel@tuta.io>"]
edition = "2018"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "v0.6.x" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.1"
typemap = "0.3"
chrono = "0.4"
time = "0.1"
futures = "0.1"
sled = "0.21"

[dependencies.trakt]
version = "0.0"
default-features = false
features = ["sync", "async"]